Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-8441

win32 backend for low-level audio doesn't pass new unit tests

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • 4.6.3
    • 4.6.3
    • Multimedia
    • None

    Description

      New unit tests have identified issues with awin32 backend. These issues need to be resolved before new unit tests are added.

      • stateChanged() signal should only be emitted on change of state currently signals can be emitted multiple times.
      • for output data is being lost when input can be read from QIODevice but cannot be written to audio sub system.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jasmcdon Jason McDonald (Closed Nokia Identity. Please assign to "macadder" instead) (Inactive)
            korbatit Kurt Korbatits (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes