win32 backend for low-level audio doesn't pass new unit tests New unit tests have identified issues with awin32 backend. These issues need to be resolved before new unit tests are added.

* stateChanged() signal should only be emitted on change of state
    currently signals can be emitted multiple times.
  * for output data is being lost when input can be read from
    QIODevice but cannot be written to audio sub system.

Task-number:QTBUG-8441
Reviewed-by:Dmytro Poplavskiy